# gen_ai_project_diffusion_interp

./: .env.example  .gitignore  CLAUDE.md  PLAN.md  README.md  pyproject.toml  requirements.txt
dsi/: __init__.py  config.py
outputs/: closure_prompt_list_v1.json
paper/: main.tex.archive  refs.bib
reports/: A01_5seed_ci_v1.md  A01_A02_5seed_partial_v1.md  A01_A02_eps_sweep_final_v1.md  A01_A02_eps_sweep_partial_v1.md  A01_A02_eps_sweep_v1.md  A01_pixel_eps4_n200.md  A02_latent_eps0.1_n200.md  A03_5seed_ci.md  A03_emb_eps0.5_n200.md  B01_em_detector_v1.md  B02_oracle_v3_detector.md  B02v3_on_mma_v1.md  C01_square_5seed_ci.md  C01_square_attack.md  C01_xtarget_5seed_v1.md  C01_xtarget_A01_vs_B01.md  C01_xtarget_v2_A01_vs_B01.md  C01_xtarget_v2_vs_B02v3_full.md  C01_xtarget_whitebox_vs_sae_v1.md  C02_axbench_raw_vs_sae.md  C03_safety_sae_partial.md  C03_safety_sae_v2_detector.md  C03_safety_sae_v2_expansion16_32.md  C06_cross_attack_robustness.md  C06_hybrid_detector.md  C09_transcoder_v2.md  C_F_c_structure.md  D01_causal_feature_graph_v1.md  D01_stage1only_meanpatch_n50.md  D02_D03_D04_lpips_gpu_v1.md  D02_D03_D04_patch_ablation.md  D02_learned_projection_v1.md  D02_stage1n2_meanpatch_n100.md  D03_zeropatch_n100.md  D04_violence_v1.md  D05_oracle_transfer_v1.md  D06_cf_strategy2_train_v1.md  D06_joint_e2e_v2.md  D06_joint_mask_udatk_v1.md  D06_mask_training_comparison_v1.md  (+57 more)
scripts/: _common.py  agg_clean_baseline.py  analyze_fc_structure.py  asr_with_oracle.py  attribute_attacks.py  batch_safety_checker.py  bootstrap.sh  build_benign_mean.py  build_cf_strategy1.py  (+107 more)
(+107 files in other folders)
