[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dsi"
version = "0.0.1"
description = "DiffSafeSAE — diffusion safety with sparse autoencoders"
authors = [{name = "Swadesh Swain", email = "swadesh_s@ece.iitr.ac.in"}]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

[tool.setuptools.packages.find]
include = ["dsi*"]
exclude = ["tests*", "scripts*", "paper*", "checkpoints*", "logs*", "outputs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
python_files = ["test_*.py", "*_test.py"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B"]
ignore = ["E501"]
